<resources>
    <string name="screen_width">1180</string>
    <string name="screen_hight">320</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="zxing_app_name">Barcode Scanner</string>
    <string name="zxing_button_ok">OK</string>
    <string name="zxing_msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="zxing_msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="NoSendClearname">删除补传信息</string>
    <string name="NoSendContiname">继续上传补传信息</string>
    <string name="NoSendReSendname">重新上传补传信息</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="action_0402_1name">请求当前驾培机构的统一编号</string>
    <string name="action_0402_5name">请求当前教练车的统一编号</string>
    <string name="action_0402_7name">请求本计时终端的统一编号</string>
    <string name="deteleStudyInfoToday">清空今日前学时记录</string>
    <string name="deteleStudyInfo_Uped">清空已上传的学时记录</string>
    <string name="upNoUpInfo">上传未上传的学时信息</string>
    <string name="action_0a02_1">请求本计时终端的统一编号</string>
    <string name="app_name">EXSUNTerminal 终端系统</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_scan">扫描蓝牙装置</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="none_found">没有找到设备。</string>
    <string name="none_paired">没有设备配对。</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pref_default_DIAL_NO">终端电话号码</string>
    <string name="pref_default_DIAL_NO_d">15070000001</string>
    <string name="pref_default_IMEI">IMEI</string>
    <string name="pref_default_IMEI_d">100221235053037</string>
    <string name="pref_default_TRAIN_TYPE">培训部分</string>
    <string name="pref_default_TRAIN_TYPE_d">2</string>
    <string name="pref_default_MODEL">终端型号</string>
    <string name="pref_default_MODEL_d">YX/4G 528G</string>
    <string name="pref_default_PERDRITYPE">准教车型</string>
    <string name="pref_default_PERDRITYPE_d">C1</string>
    <string name="pref_default_SN">终端出厂序列号</string>
    <string name="pref_default_SN_d">1001001</string>
    <string name="pref_default_VENDER_ID">制造商ID</string>
    <string name="pref_default_VENDER_ID_d">HZLYT</string>
    <string name="pref_default_vehicle_color">2</string>
    <string name="pref_default_param0013">主服务器IP</string>
    <string name="pref_default_param0013_d">221.235.53.37</string>
    <string name="pref_default_param0018">0x0018 服务器TCP端口</string>
    <string name="pref_default_param0018_d">2346</string>
    <string name="pref_default_param0081">0x0081 省域ID</string>
    <string name="pref_default_param0081_d">31</string>
    <string name="pref_default_param0082">0x0082 市县域ID</string>
    <string name="pref_default_param0082_d">00</string>
    <string name="pref_default_param0083">车辆标识</string>
    <string name="pref_default_param0083_d">京A0031学</string>
    <string name="pref_header_EDUparam">计时终端应用参数设置</string>
    <string name="pref_header_OBDII">OBDII信息</string>
    <string name="pref_header_default">设备基本登录信息</string>
    <string name="pref_header_param">设备基本参数信息</string>
    <string name="pref_header_param1">通讯超时设置</string>
    <string name="pref_header_param2">服务器设置</string>
    <string name="pref_header_param3">上报设置</string>
    <string name="pref_header_param4">监管平台电话设置</string>
    <string name="pref_header_param5">报警设置</string>
    <string name="pref_header_param6">图像/视频设置</string>
    <string name="pref_header_param7">其他设置</string>
    <string name="scanning">扫描设备…</string>
    <string name="select_device">选择一个蓝牙设备连接。</string>
    <string name="title_activity_settings">终端参数设置</string>
    <string name="title_other_devices">其他可用蓝牙设备。</string>
    <string name="title_paired_devices">已配对的蓝牙设备。</string>
</resources>
