<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_param0081_d"
        android:inputType="number"
        android:key="PROVINCE"
        android:maxLength="2"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_param0081" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_param0082_d"
        android:inputType="number"
        android:key="CITY"
        android:maxLength="4"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_param0082" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_VENDER_ID_d"
        android:inputType="textCapWords"
        android:key="VENDER_ID"
        android:maxLength="5"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_VENDER_ID" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_MODEL_d"
        android:inputType="textCapWords"
        android:key="MODEL"
        android:maxLength="20"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_MODEL" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_SN_d"
        android:inputType="number"
        android:key="SN"
        android:maxLength="7"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_SN" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_IMEI_d"
        android:inputType="number"
        android:key="IMEI"
        android:maxLength="15"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_IMEI" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="1"
        android:inputType="number"
        android:key="param0084"
        android:maxLength="3"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="0x0084 车牌颜色" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_param0083_d"
        android:inputType="textCapWords"
        android:key="VEHICLE_NUMBER"
        android:maxLength="15"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_param0083" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_param0013_d"
        android:inputType="textUri"
        android:key="tcp_ip"
        android:maxLength="50"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_param0013" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_param0018_d"
        android:inputType="number"
        android:key="tcp_port"
        android:maxLength="5"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_param0018" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_DIAL_NO_d"
        android:inputType="phone"
        android:key="DIAL_NO"
        android:maxLength="16"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_DIAL_NO" />
    <ListPreference
        android:defaultValue="2"
        android:entries="@array/pref_default_KEMU_items"
        android:entryValues="@array/pref_default_KEMU_values"
        android:key="KEMU"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_default_KEMU" />
    <ListPreference
        android:defaultValue="@string/pref_default_PERDRITYPE_d"
        android:entries="@array/pref_default_PERDRITYPE_items"
        android:entryValues="@array/pref_default_PERDRITYPE_values"
        android:key="PERDRITYPE"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_default_PERDRITYPE" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="9"
        android:inputType="number"
        android:key="CameraID"
        android:maxLength="1"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="摄像头设备编号(9:auto)" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue=""
        android:inputType="number"
        android:key="Car_ID"
        android:maxLength="16"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="当前教练车统一编号" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="idsub0306ret"
        android:summaryOff=""
        android:summaryOn="0x8001"
        android:title="照片上载时，等待应答" />
</PreferenceScreen>