<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.driverhelper.ui.activity.SettingsActivity$DefaultPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_default" />
    <header
        android:fragment="com.driverhelper.ui.activity.SettingsActivity$EDUParamPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_EDUparam" />
    <header
        android:fragment="com.driverhelper.ui.activity.SettingsActivity$Param1PreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_param1" />
    <header
        android:fragment="com.driverhelper.ui.activity.SettingsActivity$Param2PreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_param2" />
    <header
        android:fragment="com.driverhelper.ui.activity.SettingsActivity$Param3PreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_param3" />
    <header
        android:fragment="com.driverhelper.ui.activity.SettingsActivity$Param4PreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_param4" />
    <header
        android:fragment="com.driverhelper.ui.activity.SettingsActivity$Param5PreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_param5" />
    <header
        android:fragment="com.driverhelper.ui.activity.SettingsActivity$Param6PreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_param6" />
    <header
        android:fragment="com.driverhelper.ui.activity.SettingsActivity$Param7PreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_param7" />
</preference-headers>